Android: SELECT popups should not send notifications if a renderer asked to close it.

A renderer clears references to ExternalPopupMenu when it asks to close
(FrameHostMsg_HidePopup). So, another ExternalPopupMenu could receive the
notifications.

OSX, which is another platform using ExternalPopupMenu, doesn't send
notifications on close by FrameHostMsg_HidePopup.

BUG=604381

Review URL: https://codereview.chromium.org/1907443004

Cr-Commit-Position: refs/heads/master@{#389409}

Former-commit-id: 6f0358d727bdadf6f485a7b6b78c728054af3665